# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
## [11] 21-05-2020
### Added
- Bullet shooting to animation.
- Weapon handler listens to shooting animation events.
- Rotator component.

### Changed
- The way states data are store is now by type. And now everybody access the states data throught the state controller.
- Code refactoring.

## [10] 21-05-2020
### Added
- Target in shoot range and keep shooting decision.
- Physics helper.
- Shoot command.
- Weapon handle events.

## [9] 21-05-2020
### Added
- Chase and shoot state.
- Chase action.
- Push inmmediately a event.

## [8] 21-05-2020
### Added
- Player input script.
- Multiple transitions handling.

### Changed
- Movement component now listens to movement commands.
- Patrol action now sends commands.

## [7] 21-05-2020
### Added
- Scripts for AI behaviour. Includes a state controller. Actions to perform. Decisions and transitions.
- Event controller.
- Created decision events that can be triggered when AI decisions are made.
- Created action events that can be triggered when AI actions are performed.
- AI patroll action, reached patrol decision, wait action, and finished waiting decition for the patrolling AI.
- Actor awakes components.
- Created actions, decision, transitions and states for shooting and chasing.

### Changed
- The movement component now handles input catching and movement separately.
- Folder organization.

## [6] 20-05-2020
### Added
- Fixed Connor animations by setting the meshes to use a generic avatar.
- Pull and release trigger event for the weapon handler.

### Changed
- The transition to the shooting state is now using a bool parameter.

## [5] 20-05-2020
### Added
- Buidling door script for controlling the door states.