@@ -469,6 +469,25 @@ SpriteRenderer:
   m_WasSpriteAssigned: 1
   m_MaskInteraction: 0
   m_SpriteSortPoint: 0
+--- !u!1 &361280581 stripped
+GameObject:
+  m_CorrespondingSourceObject: {fileID: 6870845055111183722, guid: c5c9d2d2c3e6c8744a32c15e194e2822,
+    type: 3}
+  m_PrefabInstance: {fileID: 3205375715512329639}
+  m_PrefabAsset: {fileID: 0}
+--- !u!114 &361280582
+MonoBehaviour:
+  m_ObjectHideFlags: 0
+  m_CorrespondingSourceObject: {fileID: 0}
+  m_PrefabInstance: {fileID: 0}
+  m_PrefabAsset: {fileID: 0}
+  m_GameObject: {fileID: 361280581}
+  m_Enabled: 1
+  m_EditorHideFlags: 0
+  m_Script: {fileID: 11500000, guid: 02c0692fa5b193445b3538d1bcfca18a, type: 3}
+  m_Name: 
+  m_EditorClassIdentifier: 
+  hitPoints: 3
 --- !u!1 &611032971
 GameObject:
   m_ObjectHideFlags: 0
@@ -1429,18 +1448,38 @@ BoxCollider:
   serializedVersion: 2
   m_Size: {x: 1.9513249, y: 0.3112144, z: 1.470189}
   m_Center: {x: 0, y: 0, z: 0}
+--- !u!1 &1567401592 stripped
+GameObject:
+  m_CorrespondingSourceObject: {fileID: 5454476634795328182, guid: 498e9d49b5344ac458643d18e9a5d559,
+    type: 3}
+  m_PrefabInstance: {fileID: 2994154375964230014}
+  m_PrefabAsset: {fileID: 0}
 --- !u!114 &1567401593 stripped
 MonoBehaviour:
   m_CorrespondingSourceObject: {fileID: 7951734906785682678, guid: 498e9d49b5344ac458643d18e9a5d559,
     type: 3}
   m_PrefabInstance: {fileID: 2994154375964230014}
   m_PrefabAsset: {fileID: 0}
-  m_GameObject: {fileID: 0}
+  m_GameObject: {fileID: 1567401592}
   m_Enabled: 1
   m_EditorHideFlags: 0
   m_Script: {fileID: 11500000, guid: b107bd1ef312fc64292207ee41bc0dee, type: 3}
   m_Name: 
   m_EditorClassIdentifier: 
+--- !u!114 &1567401607
+MonoBehaviour:
+  m_ObjectHideFlags: 0
+  m_CorrespondingSourceObject: {fileID: 0}
+  m_PrefabInstance: {fileID: 0}
+  m_PrefabAsset: {fileID: 0}
+  m_GameObject: {fileID: 1567401592}
+  m_Enabled: 1
+  m_EditorHideFlags: 0
+  m_Script: {fileID: 11500000, guid: d0c30291de47aa1488be1ca4d0339f38, type: 3}
+  m_Name: 
+  m_EditorClassIdentifier: 
+  shootRange: 5
+  currentTarget: {fileID: 0}
 --- !u!1 &1632679362
 GameObject:
   m_ObjectHideFlags: 0
@@ -2002,6 +2041,11 @@ PrefabInstance:
         type: 3}
       propertyPath: m_Layer
       value: 10
+      objectReference: {fileID: 0}
+    - target: {fileID: 5454476634795328182, guid: 498e9d49b5344ac458643d18e9a5d559,
+        type: 3}
+      propertyPath: m_IsActive
+      value: 0
       objectReference: {fileID: 0}
     - target: {fileID: 5720675911621502923, guid: 498e9d49b5344ac458643d18e9a5d559,
         type: 3}
