@@ -14,4 +14,4 @@ MonoBehaviour:
   m_EditorClassIdentifier: 
   rayCastLayers:
     serializedVersion: 2
-    m_Bits: 0
+    m_Bits: 512
