@@ -12,12 +12,11 @@ MonoBehaviour:
   m_Script: {fileID: 11500000, guid: 95397f9de46489045a7102f7e7cdec3d, type: 3}
   m_Name: Chasing
   m_EditorClassIdentifier: 
-  stateId: chasing
   weight: 3
   actions:
   - {fileID: 11400000, guid: d831bbca27148a94195e940cabf1f016, type: 2}
   transitions:
-  - decision: {fileID: 11400000, guid: de73f40897ef2fa42bbb0b6190436740, type: 2}
+  - decision: {fileID: 11400000, guid: 4cc4be9a1a7c4b74a9932475b283179a, type: 2}
     trueState: {fileID: 11400000, guid: 60169ca6d12db1940bacdf7a9339ddef, type: 2}
     falseState: {fileID: 11400000, guid: 408033498a87409499cb9c6b0d1d005e, type: 2}
   - decision: {fileID: 11400000, guid: a382ffe3e134a9343a49c9fa33b9523d, type: 2}
