@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 08d09bbbc293b5a488512837887a016f
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
