@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 02c0692fa5b193445b3538d1bcfca18a
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
