@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 03971eb3128c04a48a580af61970423b
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
