@@ -5,6 +5,14 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+## [12] 21-05-2020
+### Added
+- Health component for the actors.
+- Actor hit by bullet event.
+
+### Changed
+- Folder structure.
+
 ## [11] 21-05-2020
 ### Added
 - Bullet shooting to animation.
